# libri-light-abx

./: .gitignore  LICENCE.txt  README.md  build_wheel.sh  pyproject.toml  setup.py
.github/workflows/: conda-build.yaml  pipy-publish.yaml
conda-recipe/: 0001-patch.patch  cython-win.patch  meta.yaml
libriabx/: __init__.py  wrappers.py
libriabx/libri_light/: README.md  eval_ABX.py
libriabx/libri_light/ABX_src/: abx_group_computation.py  abx_iterators.py
